8338566: Missing membar in ciEnv::get_or_create_exception before publishing handle